--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,6 @@ font-family: 'Lily Script One', cursive;
 align-self: right; 
 margin-right: 100px;
 position: relative;
-margin-top:-130px;
-left: -390px;
 }
 
 .App-logo {
@@ -54,11 +52,9 @@ align-self: center;
 }
 
 .Applogo2 {
-height: 40px;
+height: 60px;
 margin-right: 100px;
 position: relative;
-top:-15px;
-left:-330px;
 
 }
 
@@ -100,18 +96,6 @@ border-radius: 5px;
 background-color: rgba(132, 153, 116, 0.4);
 opacity: 0.8;
 color: #FFFFFF;
-height:100px;
-}
-
-.jumbotron * {
-    display: inline-block;
-    position: relative;
-}
-
-.button-jumbotron{
-    position: relative;
-    top:-15px;
-    left:350px;
 }
 
 /* .App-Header2 {
@@ -120,21 +104,20 @@ margin-left: 20px;
 float: left;
 } */
 
-.chatbox-container {
-width: 800px;
-height: 470px;
+.chatbox {
+width: 400px;
+height: 470px auto;
 background: #fff;
 padding: 25px;
-margin-left: 400px;
+margin-left: 300px;
 box-shadow: 0 3px #ccc;
 float: center;
-border-radius:30px;
 }
 
 .chatlogs {
 padding: 10px;
 width: 100%;
-height:330px;;
+height: 500px;
 overflow-x: hidden;
 overflow-y: scroll;
 }
@@ -191,24 +174,22 @@ margin-left: 30px;
 }
 
 .typebox {
-margin-top: 60px;
+margin-top: 250px;
 display: flex;
 align-items: flex-start;
 margin-left: 0px;
 width: 100%;
-margin:none;
 }
 
 .typebox textarea {
 background: #fbfbfb;
-width: 600px;;
-height: 50px;
+width: 100%;
+height: 70px;
 border: 2px solid #eee;
 border-radius: 6px;
 padding: 10px;
 font-size: 12px;
 color: #333;
-border: 2px solid violet;
 }
 
 .typebox textarea::-webkit-scrollbar {
