--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,23 @@ border-radius: 5px;
 background: rgba(0,0,0,.1);
 }
 
+.yourChat{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  margin-bottom: 10px;  
+}
+
+.yourChat .chat-message {
+  width: 70%;
+  padding: 5px;
+  margin: 5px 10px 0;
+  background: #4ddbff;
+  border-radius: 10px;
+  color: black;
+  font-size: 14px;
+  }
+
 .chat {
 display: flex;
 flex-flow: row wrap;
