--- a/src/App.css
+++ b/src/App.css
@@ -1,256 +1,5 @@
-.App {
-text-align: center;
-}
-
-body {
-background-color: #36384C;
-}
-
-.nav-list {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color: #E3BAB3;
-}
-
-li {
-float: left;
-}
-
-li a {
-display: block;
-color: #613A43;
-text-align: center;
-padding: 16px;
-text-decoration: none;
-}
-
-li a:hover {
-background-color: #849974 ;
-}
-
-.App-title {
-color: #FFFFFF;
-font-size: 38px;
-font-family: 'Lily Script One', cursive;  
-}
-
-.App-title2 {
-color: #FFFFFF;
-font-size: 32px;
-font-family: 'Lily Script One', cursive; 
-align-self: right; 
-margin-right: 100px;
-position: relative;
-margin-top:-130px;
-left: -390px;
-}
-
-.App-logo {
-height: 100px;
-margin-top: 10%;
-align-self: center;
-}
-
-.Applogo2 {
-height: 40px;
-margin-right: 100px;
-position: relative;
-top:-15px;
-left:-330px;
-
-}
-
-.container {
-/* background-color: #849974; */
-width: 60%;
-background: url(https://image.ibb.co/nH1cSm/Untitled_design.jpg) no-repeat center top #000;
-padding-top: 5%;
-padding-bottom: 8%;
-margin-left: 20%;
-margin-right: 20%;
-border: 4px solid;
-border-color:#FFFFFF;
-border-radius: 40px;
-}
-
-p {
-color: #ffffff;
-font-family: 'Dosis', sans-serif;
-font-size: 22px;  
-}
-
-input[type=text] {
-padding:5px; 
-border:2px solid #ccc; 
--webkit-border-radius: 5px;
-border-radius: 5px;
-}
-
-input[type=submit] {
-padding:5px 15px;
-border:0 none;
-cursor:pointer;
--webkit-border-radius: 5px;
-border-radius: 5px; 
-}
-
-.jumbotron {
-background-color: rgba(132, 153, 116, 0.4);
-opacity: 0.8;
-color: #FFFFFF;
-height:100px;
-}
-
-.jumbotron * {
-    display: inline-block;
-    position: relative;
-}
-
-.button-jumbotron{
-    position: relative;
-    top:-15px;
-    left:350px;
-}
-
-/* .App-Header2 {
-margin-top: 15px;
-margin-left: 20px;
-float: left;
-} */
-
-.chatbox-container {
-width: 800px;
-height: 470px;
-background: #fff;
-padding: 25px;
-margin-left: 400px;
-box-shadow: 0 3px #ccc;
-float: center;
-border-radius:30px;
-}
-
-.chatlogs {
-padding: 10px;
-width: 100%;
-height:330px;;
-overflow-x: hidden;
-overflow-y: scroll;
-}
-
-.chatlogs::-webkit-scrollbar {
-width: 10px;
-}
-
-.chatlogs::-webkit-scrollbar-thumb {
-border-radius: 5px;
-background: rgba(0,0,0,.1);
-}
-
-.yourChat{
-  display: flex;
-  flex-flow: row wrap;
-  align-items: flex-start;
-  margin-bottom: 10px;  
-}
-
-.yourChat .chat-message {
-  width: 70%;
-  padding: 5px;
-  margin: 5px 10px 0;
-  background: #4ddbff;
-  border-radius: 10px;
-  color: black;
-  font-size: 14px;
-  }
-
-.chat {
-display: flex;
-flex-flow: row wrap;
-align-items: flex-start;
-margin-bottom: 10px;
-}
-
-/* .chat .user-photo {
-width: 60px;
-height: 60px;
-border-radius: 50%;
-} */
-
-.chat .chat-message {
-width: 70%;
-padding: 5px;
-margin: 5px 10px 0;
-background: #849974;
-border-radius: 10px;
-color: #fff;
-font-size: 14px;
-}
-
-.user1 {
-color: #613A43;
-font-size: 12px;
-}
-
-.users {
-color: #613A43;
-font-size: 14px;
-background-color: #849974;
-width: 20%;
-padding-top: 5%;
-padding-bottom: 8%;
-border: 4px solid;
-border-color:#FFFFFF;
-border-radius: 40px;
-float: left;
-margin-left: 30px;
-}
-
-.typebox {
-margin-top: 60px;
-display: flex;
-align-items: flex-start;
-margin-left: 0px;
-width: 100%;
-margin:none;
-}
-
-.typebox textarea {
-background: #fbfbfb;
-width: 600px;;
-height: 50px;
-border: 2px solid #eee;
-border-radius: 6px;
-padding: 10px;
-font-size: 12px;
-color: #333;
-border: 2px solid violet;
-}
-
-.typebox textarea::-webkit-scrollbar {
-width: 10px;
-}
-
-.typebox textarea::-webkit-scrollbar-thumb {
-border-radius: 5px;
-background: rgba(0,0,0,.1);
-}
-
-button {
--webkit-border-radius: 9;
--moz-border-radius: 9;
-border-radius: 9px;
-font-family: Arial;
-color: #ffffff;
-font-size: 16px;
-background: #613a43;
-padding: 10px 20px 10px 20px;
-text-decoration: none;
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-button:hover {
-background: #e3bab3;
-text-decoration: none;
+body{
+    height:100vh;
+    margin:none;
+    width:none;
 }
