--- a/src/components/chatroom.css
+++ b/src/components/chatroom.css
@@ -7,7 +7,7 @@
 }
 
 
- .App-title2 {
+ #chat-title2 {
     color: rgb(0, 153, 153);
     font-size: 34px;
     font-family: 'Lily Script One', cursive; 
