--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-body{
-    height:100vh;
-    margin:none;
-    width:none;
-}
+/* .app {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 100%;
+} */
