--- a/src/components/chatbox.css
+++ b/src/components/chatbox.css
@@ -6,11 +6,25 @@
     height: 40px;
     width: 100%;
 } */
+
+#chatbox input {
+    width: 65%;
+    padding-left: 10px;
+    font-size: 20px;
+}
+
+input::-webkit-input-placeholder{
+    opacity: .7;
+}
+
+input:focus{
+    outline: none
+} 
+
 /* ########## Upload button and Popup styles ########## */
 .plus{
     position: relative;
-    height:39px;
-    width: 40px;
+    width: 50px;    
     padding: 10px;
     background:#e6e6e6;
     box-shadow: none;
@@ -27,14 +41,37 @@
 }
 
 .plus img{
-    width: 20px;
+    width: 22px;
     position: absolute;
-    bottom:10px;
-    right:8px;
-
+    bottom: 13px;
+    right: 10px;
     margin: 0 auto
 }
 
+.send{
+    background: #33cccc;
+    width:60px;
+    padding-left: 15px;
+    box-shadow: none;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    outline: none;
+    border: none;
+}
+
+.send:hover{
+    background: grey;
+}
+
+.send img{
+    width: 22px;
+    padding-bottom: 15px;
+    position: relative;
+    top: 8px;
+    right: 8px;
+}
+
+/*
 .upload{
     position: absolute;
     transform: translate(20px,-40px);
@@ -70,7 +107,7 @@
     border-bottom: 15px solid transparent;
   }
   
-  .bubble:after{
+.bubble:after{
     content: "";
     position: absolute;
     bottom: -22px;
@@ -78,55 +115,12 @@
     border-right: 25px solid transparent;
     border-top: 15px solid #fff;
     border-bottom: 15px solid transparent;
-  }
+} */
 
 /* ########## Input Box styles ######### */
-.chatbox input{
-    position: relative;
-    bottom:5px;
-    width: 650px;
-    height:39px;
-    padding-left: 15px;
-    border-radius: 0;
-    border-right-style: none;
-    border-left-style: none
-}
 
-input::-webkit-input-placeholder{
-    opacity: .7;
-}
-
-input:focus{
-    outline: none
-}
 
 /* ########## Send Button ########### */
-.send{
-    background: #33cccc;
-    width:60px;
-    height:39px;
-    padding-left: 15px;
-    box-shadow: none;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    outline: none;
-    border:none;
-}
-
-.send:hover{
-    background: grey;
-}
-
-.send img{
-    width: 20px;
-    padding-bottom: 15px;
-    position: relative;
-    top:8px;
-    right:8px;
-}
 
 
 
-  
