--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -108,20 +108,96 @@
     grid-area: chat;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: auto 75px;
-
+    grid-template-rows: 1fr 75px;
+    grid-template-areas: 
+        "chatmessages"
+        "chatbox"
 }
 
 .chat-messages {
+    grid-area: chatmessages;
+    /* grid-column: 1/2;
+    grid-row: 1/2; */
+    padding: 0 5%;
+    width: 100%;
+    height: 100%;
+    /* position: absolute; */
+    overflow-x: hidden;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-messages .message {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-auto-rows: auto auto;
+    
+}
+
+.message img, 
+.message .chat,
+.message.others img, 
+.message.others .chat  {
     grid-column: 1/2;
     grid-row: 1/2;
-    margin-left: 10%;
-    margin-right: 10%;
+}
+
+.message img, 
+.message.others img {
+    width: 40%;
+    border-radius: 5px;
+}
+
+.message .chat, 
+.message.others .chat {
+    width: auto;
+    max-width: 90%;
+    height: auto;
+    padding: 9px 20px;
+    font-weight: bold;
+    text-align: right;
+    word-wrap:break-word; 
+    padding:10px; 
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.message .chat {
+    background-color:#33cccc;
+    color: #ffffff;
+}
+
+.message.others .chat {
+    background-color: #ECF0F1;
+    color: #212F3D; 
+    text-align: left;
+}
+
+.message h4
+.message.others h4 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
+.message img,
+.message .chat,
+.message h4 {
+    justify-self: end;
+}
+
+.message.others img,
+.message.others .chat,
+.message.others h4 {
+    justify-self: start;
 }
 
 #chatbox {
-    grid-column: 1/2;
-    grid-row: 2/3;
+    grid-area: chatbox;
+    /* grid-column: 1/2;
+    grid-row: 2/3; */
     display: flex;
     justify-content: center;
     height: 65%;
