--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -173,6 +173,20 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
+/* .bubble-chat::after {
+    content: '';
+    display: block;
+    position: absolute;
+
+    left: -15px;
+
+    width: 0;
+    height: 0;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-right: 15px solid #000000;
+} */
+
 .message .chat {
     background-color:#33cccc;
     color: #ffffff;
@@ -288,12 +302,15 @@
 
 @media screen and (max-width: 426px) {
     .chatroom {
-        grid-template-columns: 30% 70%; 
+        grid-template-columns: 100%; 
         grid-template-areas: 
-            "header header"
-            "side chat"
+            "header"
+            "chat"
     }
 
+    #chatbox {
+        margin-top: 30px;
+    }
 }
 
 /* .photo img {
