--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -118,7 +118,7 @@
     grid-area: chatmessages;
     padding: 0 5% 20px 5%;
     width: 100%;
-    height: 75vh;
+    height: calc(100vh - 165px);
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
@@ -277,12 +277,14 @@
 }
 
 .toaster-item{
+    display: flex;
+    justify-content: center;
     color: white;
-    padding: 10px;
-    font-size: 20px;
+    padding: 20px 10px;
+    font-size: 16px;
     text-align: center;
     width: 20vw;
-    height: 10vh;
+    height: auto;
     opacity: 0.9;
     margin-top: 10px;
 }
