--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -50,8 +50,8 @@
     border-width: 1px;
     margin: 5px 0;
     padding-left: 10px;
-    color: #000000;
-    font-size: 20px;
+    color: #2c2929;
+    font-size: 16px;
 }
 
 .user-input strong {
@@ -76,13 +76,14 @@
 
 .chatroom {
     display: grid;
-    grid-template-columns: 20% 60% 1fr;
-    grid-template-rows: 75px 1fr;
+    grid-template-rows: 75px 100px 1fr;
     height: 100vh;
     width: 100vw; 
+    grid-template-columns: 100%; 
     grid-template-areas: 
-        "header . photo"
-        "side chat photo"
+        "header"
+        "side"
+        "chat"
 }
 
 #header {
@@ -100,34 +101,69 @@
 .sidebar-chatroom {
     grid-area: side;
     background-color: #ECF0F1;
-    padding-top: 30px;
-    padding-left: 20%;
-    padding-right: 20%;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-template-areas: 
+        "chatroom members"
 }
 
 .sidebar-chatroom > .active {
     margin-top: 15px;
-    font-size: 15px;
 }
 
+.active p {
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 18px;
+} 
+
 .chat-room {
+    grid-area: chatroom;
     display: grid;
     grid-template-columns: auto 1fr;
     grid-auto-rows: auto auto;
     width: 100%;
+    margin-left: 10px; 
 }
 
 .chat-room > strong {
     grid-column: 1/2;
     grid-row: 1/2;
+    align-self: end;
 }
 
 .chat-room > h2 {
     grid-column: 1/3;
     grid-row: 2/3; 
-    margin: 0 0 20px 0;
+    margin-top: 0;
     padding: 0; 
     font-weight: bold;
+}
+
+.chat-room a {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    color: red;
+    margin-left: 5px; 
+    align-self: end;    
+}
+
+.members {
+    grid-area: members;
+    height: 90px;
+    width: 100%;
+    overflow-y: scroll;
+    align-self: center;
+    justify-self: center;   
+}
+
+.members::-webkit-scrollbar {
+    width: 10px;
+}
+
+.members::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: rgba(0,0,0,.1);
 }
 
 .chat-room a {
@@ -155,11 +191,12 @@
     grid-area: chatmessages;
     padding: 0 5% 20px 5%;
     width: 100%;
-    height: calc(100vh - 165px);
+    height: calc(100vh - 265px);
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
     overflow-y: scroll;
+    align-self: center;
 }
 
 .chat-messages::-webkit-scrollbar {
@@ -204,7 +241,7 @@
     padding: 10px 20px;
     /* font-weight: bold; */
     text-align: right;
-    word-wrap:break-word; 
+    word-wrap: break-word; 
     border-radius: 5px;
     font-size: 14px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -269,8 +306,6 @@
 
 #chatbox {
     grid-area: chatbox;
-    /* grid-column: 1/2;
-    grid-row: 2/3; */
     display: flex;
     justify-content: center;
     height: 65%;
@@ -390,7 +425,7 @@ input:focus{
     padding: 20px 10px;
     font-size: 16px;
     text-align: center;
-    width: 20vw;
+    width: 40vw;
     height: auto;
     opacity: 0.9;
     margin-top: 10px;
@@ -402,118 +437,66 @@ input:focus{
     grid-area: photo;
     background: url('../side-image.png') no-repeat center;
     background-size: cover;
+    display: none;
 }
 
-@media screen and (max-width: 770px) {
+/* RESPONSIVE */
+
+@media screen and (min-width: 426px) {
+
     .chatroom {
+        grid-template-rows: 75px 1fr;
+        grid-template-columns: 30% 70%; 
         grid-template-areas: 
-        "header header photo"
-        "side chat photo"
+            "header header "
+            "side chat"
     }
-    
-    #header {
-        justify-content: left;
-        margin-left: 20px; 
-    } 
+
+    .sidebar-chatroom {
+        grid-template-columns: 100%;
+        grid-template-rows: 125px calc(100vh - 200px);
+        grid-template-areas: 
+            "chatroom"
+            "members";
+        padding: 0 20%;
+    }
+
+    .chat-room {
+        margin: 0;
+    }
+
+    .chat-room h2 {
+        margin: 0;
+    }
+
+    .members {
+        align-self: start;
+        justify-self: start;
+        height: calc(100vh - 220px)
+    }
+
+    .chat-messages {
+        height: calc(100vh - 160px);
+    }
+
+    .toaster-item {
+        width: 20vw;
+    }
+
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (min-width: 770px) {
+
     .chatroom {
-        grid-template-columns: 100%; 
+        grid-template-columns: 20% 60% 1fr;
+        grid-template-rows: 75px 1fr;
         grid-template-areas: 
-            "header"
-            "chat"
+            "header . photo"
+            "side chat photo"
     }
-/* 
-    #chatbox {
-        margin-top: 30px;
-    } */
-}
 
-/* .photo img {
-    height: auto;
-    width: 100%;
-} */
-
-/* .home {
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    height: 100vh;
-    width: 100vh;
-}
-
-.sidebar {
-    grid-column: 1/2;
-    display: flex;
-    position: relative;
-    bottom:20px;
-    margin:none;
-    flex-direction: column;
-    justify-content: center;
-    padding:10px;
-    width:230px;
-}
-
-.photo {
-    grid-column: 2/3;
-}
-
-.photo img{
-    height:100vh;
-    width: auto;
-}
-
-.home {
-    display: flex;
-    height:100vh;
-    margin:none;
-}
-.App-intro{
-    color:gray;
-    position: relative;
-    top:40px;
-}
-
-span {
-color: rgb(0, 153, 153);
-margin:none;
-align-self: center;
-position: absolute;
-bottom:575px; 
-color: rgb(0, 153, 153);
-font-size: 38px;
-font-family: 'Lily Script One', cursive; 
-
+    .photo-chatroom {
+        display: grid;
+    }
 
 }
-
-
-
-
-
-em {
-position: relative;
-bottom:20px;
-color: gray;
-text-align: center;
-font-family: 'Dosis', sans-serif;
-font-size: 18px;  
-}
-
-input[type=text] {
-padding:5px; 
-border:2px solid #ccc; 
-margin-top:5px;
-width:200px;
-}
-
-input[type=submit] {
-padding:5px 15px;
-border:0 none;
-cursor:pointer;
-width:200px;
-height:35px;
-margin:none;
-background-color:rgb(0, 153, 153);
-color:white;
-} */
