--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -26,7 +26,7 @@
 .photo {
     grid-column: 2/3;
     grid-row: 1/3;
-    background: url('../side-image.png') no-repeat center;
+    background: url('../images/side-image.png') no-repeat center;
     background-size: cover;
 }
 
@@ -403,8 +403,9 @@ input:focus{
   
 .bubble:after{
     content: "";
-    position: absolute;
-    top: 20px;
+    position: relative;
+    top: 34px;
+    left: -66px;
     border-right: 25px solid transparent;
     border-top: 15px solid #fff;
     border-bottom: 15px solid transparent;
@@ -435,14 +436,14 @@ input:focus{
 
 .photo-chatroom {
     grid-area: photo;
-    background: url('../side-image.png') no-repeat center;
+    background: url('../images/side-image.png') no-repeat center;
     background-size: cover;
     display: none;
 }
 
 /* RESPONSIVE */
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 570px) {
 
     .chatroom {
         grid-template-rows: 75px 1fr;
@@ -485,7 +486,7 @@ input:focus{
 
 }
 
-@media screen and (min-width: 770px) {
+@media screen and (min-width: 850px) {
 
     .chatroom {
         grid-template-columns: 20% 60% 1fr;
