--- a/src/style/home.css
+++ b/src/style/home.css
@@ -76,15 +76,13 @@
 
 .chatroom {
     display: grid;
-    grid-template-rows: 75px 100px 1fr;
+    grid-template-rows: 75px 1fr;
     height: 100vh;
-    width: minmax(410px, 100vw);
-    overflow-x: hidden; 
+    width: 100vw;
     grid-template-columns: 100%; 
     grid-template-areas: 
         "header"
-        "side"
-        "chat"
+        "chat";
 }
 
 #header {
@@ -100,17 +98,44 @@
 /* CHATROOM > SIDEBAR */
 
 .sidebar-chatroom {
-    grid-area: side;
-/*     background-color: #ECF0F1; */
+    grid-column: 1;
+    grid-row: 1/3;
+    position: relative;
+    z-index: 1;
+    width: 210px;
+    /* grid-area: side; */
+    /* background-color: #ECF0F1; */
     background-color: lightgray ;
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 1fr;
     grid-template-areas: 
-        "chatroom members"
+        "chatroom" 
+        "members";
+    padding: 0 20px;
+    opacity: 0.9;
+    left: -198px;
+    transition: 1000ms;
 }
 
-.sidebar-chatroom > .active {
-    margin-top: 15px;
+.sidebar-chatroom.reveal {
+    left: 0;
+}
+
+.sidebar-chatroom button {
+    display: block;
+    position: absolute;
+    background-color: lightgray;
+    transform: rotate(90deg);
+    top: 28px;
+    left: 190px;
+    font-weight: bold;
+    font-size: 20px;
+    border: none;
+}
+
+.sidebar-chatroom button:focus {
+    outline: none;
 }
 
 .active p {
@@ -125,16 +150,16 @@
     grid-template-columns: auto 1fr;
     grid-auto-rows: auto auto;
     width: 100%;
-    margin-left: 10px; 
+    /* margin-left: 10px; */ 
 }
 
-.chat-room > strong {
+.chat-room strong {
     grid-column: 1/2;
     grid-row: 1/2;
     align-self: end;
 }
 
-.chat-room > h2 {
+.chat-room h2 {
     grid-column: 1/3;
     grid-row: 2/3; 
     margin-top: 0;
@@ -155,7 +180,7 @@
     height: 90px;
     width: 100%;
     overflow-y: scroll;
-    align-self: center;
+    /*   */
     justify-self: center;   
 }
 
@@ -168,11 +193,8 @@
     background: rgba(0,0,0,.1);
 }
 
-.chat-room a {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    color: red;
-    margin-left: 5px; 
+.sidebar-chatroom > .active {
+    margin-top: 15px;
 }
 
 /* CHATROOM > CHAT AREA */
@@ -193,7 +215,7 @@
     grid-area: chatmessages;
     padding: 0 5% 20px 5%;
     width: 100%;
-    height: calc(100vh - 265px);
+    height: calc(100vh - 165px);
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
@@ -212,7 +234,7 @@
 
 .chat-messages .joined-leave {
     text-align: center;    
-    margin: 30px 0;
+    margin: 20px 0;
     color: #808B96; 
 }
 
@@ -234,6 +256,7 @@
 .message.others img {
     width: 40%;
     border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .message .chat, 
@@ -329,6 +352,7 @@ input::-webkit-input-placeholder{
 input:focus{
     outline: none
 } 
+
 .plus{
     position: relative;
     width: 50px;    
@@ -357,9 +381,9 @@ input:focus{
 
 .upload {
     position: absolute;
-    left: 40px;
-    top: -45px;
-    z-index: 1; 
+    left: 46px;
+    top: -37px;
+    z-index: 1;
 } 
 
 .send{
@@ -386,12 +410,13 @@ input:focus{
 }
 
 .attach{
-    height: 40px;
+    height: 33px;
     width: 90px;
     display: flex;
     padding-top: 5px;
     box-shadow: 1px 6px 15px grey;
-    background: white
+    background: white;
+    justify-content: center;
 }
 
 .attach img{
@@ -416,7 +441,7 @@ input:focus{
 .bubble:after{
     content: "";
     position: relative;
-    top: 34px;
+    top: 28px;
     left: -66px;
     border-right: 25px solid transparent;
     border-top: 15px solid #fff;
@@ -472,6 +497,14 @@ input:focus{
             "chatroom"
             "members";
         padding: 0 20%;
+        width: 100%;
+        grid-row: 2/3;
+        left: 0;
+        transition: none;
+    }
+
+    .sidebar-chatroom button {
+        display: none;
     }
 
     .chat-room {
