--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,3 +3,552 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+/* HOME PAGE */
+
+.home {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 50px 1fr;
+  height: 100vh;
+  width: 100vw
+}
+
+.sidebar > h1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.sidebar > .user-input {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  padding: calc((100vh - 450px)/2) 10%;
+  color: #BDC3C7;
+}
+
+.photo {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  background: url('../images/side-image.png') no-repeat center;
+  background-size: cover;
+}
+
+.sidebar h1 {
+  font-family: 'Lily Script One', cursive;
+  text-align: center;    
+  font-size: 30px;
+  color: #33cccc;
+}
+
+.user-input em {
+  text-align: center;
+  font-size: 17px;
+  padding: 0 25px;
+  margin-bottom: 15px;
+}
+
+.user-input input {
+  height: 35px;
+  border-color: #BDC3C7;
+  border-width: 1px;
+  margin: 5px 0;
+  padding-left: 10px;
+  color: #2c2929;
+  font-size: 16px;
+}
+
+.user-input strong {
+  color: #909497;
+  margin: 3px 0;
+}
+
+.user-input #join-now {
+  background-color: #76D7C4;
+  border: none;
+  color: #ffffff;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+#join-now:hover {
+  background-color: #17A589; 
+}
+
+/* CHATROOM PAGE */
+
+.chatroom {
+  display: grid;
+  grid-template-rows: 75px 1fr;
+  height: 100vh;
+  width: 100vw;
+  grid-template-columns: 100%; 
+  grid-template-areas: 
+      "header"
+      "chat";
+}
+
+#header {
+  grid-area: header;
+  font-family: 'Lily Script One', cursive;
+  font-size: 30px;
+  color: #33cccc;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+}
+
+/* CHATROOM > SIDEBAR */
+
+.sidebar-chatroom {
+  grid-column: 1;
+  grid-row: 1/3;
+  position: relative;
+  z-index: 1;
+  width: 210px;
+  /* grid-area: side; */
+  /* background-color: #ECF0F1; */
+  background-color: lightgray ;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 20% 1fr;
+  grid-template-areas: 
+      "chatroom" 
+      "members";
+  padding: 0 20px;
+  opacity: 0.9;
+  left: -198px;
+  transition: 500ms;
+}
+
+.sidebar-chatroom.reveal {
+  left: 0;
+}
+
+.sidebar-chatroom button {
+  display: block;
+  position: absolute;
+  background-color: lightgray;
+  transform: rotate(90deg);
+  top: 28px;
+  left: 190px;
+  font-weight: bold;
+  font-size: 20px;
+  border: none;
+}
+
+.sidebar-chatroom button:focus {
+  outline: none;
+}
+
+.active p {
+  margin-top: 10px;
+  margin-left: 10px;
+  font-size: 18px;
+} 
+
+.chat-room {
+  grid-area: chatroom;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-auto-rows: auto auto;
+  width: 100%;
+  /* margin-left: 10px; */ 
+}
+
+.chat-room strong {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  align-self: end;
+}
+
+.chat-room h2 {
+  grid-column: 1/3;
+  grid-row: 2/3; 
+  margin-top: 0;
+  padding: 0; 
+  font-weight: bold;
+}
+
+.chat-room a {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  color: red;
+  margin-left: 5px; 
+  align-self: end;    
+}
+
+.members {
+  grid-area: members;
+  height: 90px;
+  width: 100%;
+  overflow-y: scroll;
+  /*   */
+  justify-self: center;   
+}
+
+.members::-webkit-scrollbar {
+  width: 10px;
+}
+
+.members::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: rgba(0,0,0,.1);
+}
+
+.sidebar-chatroom > .active {
+  margin-top: 15px;
+}
+
+/* CHATROOM > CHAT AREA */
+
+.chatarea {
+  grid-area: chat;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 1fr 70px;
+  grid-template-areas: 
+      "chatmessages"
+      "chatbox"
+}
+
+/* CHAT AREA > MESSAGE */
+
+.chat-messages {
+  grid-area: chatmessages;
+  padding: 0 5% 20px 5%;
+  width: 100%;
+  height: calc(100vh - 165px);
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  align-self: center;
+}
+
+.chat-messages::-webkit-scrollbar {
+  width: 10px;
+}
+
+.chat-messages::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: rgba(0,0,0,.1);
+}
+
+.chat-messages .joined-leave {
+  text-align: center;    
+  margin: 20px 0;
+  color: #808B96; 
+}
+
+.chat-messages .message {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-auto-rows: auto auto;
+}
+
+.message img, 
+.message .chat,
+.message.others img, 
+.message.others .chat  {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.message img, 
+.message.others img {
+  width: 40%;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.message .chat, 
+.message.others .chat {
+  width: auto;
+  max-width: 90%;
+  height: auto;
+  padding: 10px 20px;
+  /* font-weight: bold; */
+  text-align: right;
+  word-wrap: break-word; 
+  border-radius: 5px;
+  font-size: 14px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);    
+}
+
+/* .bubble-chat::after {
+  content: '';
+  display: block;
+  position: absolute;
+
+  left: -15px;
+
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-right: 15px solid #000000;
+} */
+
+.message .chat {
+  background-color:#33cccc;
+  color: #ffffff;
+}
+
+.message.others .chat {
+  background-color: #ECF0F1;
+  color: #808B96; 
+  text-align: left;
+}
+
+.message .author,
+.message.others .author {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  margin-bottom: 25px;
+  margin-top: 10px;
+}
+
+.message img,
+.message .chat,
+.message .author {
+  justify-self: end;
+}
+
+.message.others img,
+.message.others .chat,
+.message.others .author {
+  justify-self: start;
+}
+
+.message .author strong,
+.message.others .author strong {
+  color: #808B96;
+}
+
+.message .author span,
+.message.others .author span {
+  color: rgb(170, 172, 175);
+}
+
+/* CHAT AREA > CHATBOX */
+
+#chatbox {
+  grid-area: chatbox;
+  display: flex;
+  justify-content: center;
+  height: 65%;
+  position: relative;
+  padding: 0 30px;
+}   
+
+#chatbox input {
+  width: 100%;
+  padding-left: 10px;
+  font-size: 20px;
+}
+
+input::-webkit-input-placeholder{
+  opacity: .7;
+}
+
+input:focus{
+  outline: none
+} 
+
+.plus{
+  position: relative;
+  width: 50px;    
+  padding: 10px;
+  background:#e6e6e6;
+  box-shadow: none;
+  border:none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  outline: none
+}
+
+.plus:hover{
+  background:silver;
+}
+
+.plus img{
+  width: 22px;
+  position: absolute;
+  bottom: 12px;
+  right: 10px;
+  margin: 0 auto
+}
+
+.upload {
+  position: absolute;
+  left: 46px;
+  top: -37px;
+  z-index: 1;
+} 
+
+.send{
+  background: #33cccc;
+  width:60px;
+  padding-left: 15px;
+  box-shadow: none;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  outline: none;
+  border: none;
+}
+
+.send:hover{
+  background: grey;
+}
+
+.send img{
+  width: 22px;
+  padding-bottom: 15px;
+  position: relative;
+  top: 8px;
+  right: 8px;
+}
+
+.attach{
+  height: 33px;
+  width: 90px;
+  display: flex;
+  padding-top: 5px;
+  box-shadow: 1px 6px 15px grey;
+  background: white;
+  justify-content: center;
+}
+
+.attach img{
+  width: 20px;
+  height: 20px;
+}
+
+.insertImage{
+  margin-left:25px;
+  margin-right: 15px
+}
+
+.bubble:before{
+  content: "";
+  position: absolute;
+  top: 20px;
+  border-left: 10px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+}
+
+.bubble:after{
+  content: "";
+  position: relative;
+  top: 28px;
+  left: -66px;
+  border-right: 25px solid transparent;
+  border-top: 15px solid #fff;
+  border-bottom: 15px solid transparent;
+}
+
+/* TOASTER */
+
+.toaster-container{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+
+.toaster-item{
+  display: flex;
+  justify-content: center;
+  color: white;
+  padding: 20px 10px;
+  font-size: 16px;
+  text-align: center;
+  width: 40vw;
+  height: auto;
+  opacity: 0.9;
+  margin-top: 10px;
+}
+
+/* CHATROOM > PHOTO */
+
+.photo-chatroom {
+  grid-area: photo;
+  background: url('../images/side-image.png') no-repeat center;
+  background-size: cover;
+  display: none;
+}
+
+/* RESPONSIVE */
+
+@media screen and (min-width: 570px) {
+
+  .chatroom {
+      grid-template-rows: 75px 1fr;
+      grid-template-columns: 30% 70%; 
+      grid-template-areas: 
+          "header header "
+          "side chat"
+  }
+
+  .sidebar-chatroom {
+      grid-template-columns: 100%;
+      grid-template-rows: 125px calc(100vh - 200px);
+      grid-template-areas: 
+          "chatroom"
+          "members";
+      padding: 0 20%;
+      width: 100%;
+      grid-row: 2/3;
+      left: 0;
+      transition: none;
+  }
+
+  .sidebar-chatroom button {
+      display: none;
+  }
+
+  .chat-room {
+      margin: 0;
+  }
+
+  .chat-room h2 {
+      margin: 0;
+  }
+
+  .members {
+      align-self: start;
+      justify-self: start;
+      height: calc(100vh - 220px)
+  }
+
+  .chat-messages {
+      height: calc(100vh - 160px);
+  }
+
+  .toaster-item {
+      width: 20vw;
+  }
+
+}
+
+@media screen and (min-width: 850px) {
+
+  .chatroom {
+      grid-template-columns: 20% 60% 1fr;
+      grid-template-rows: 75px 1fr;
+      grid-template-areas: 
+          "header . photo"
+          "side chat photo"
+  }
+
+  .photo-chatroom {
+      display: grid;
+  }
+
+}
